config.json: updated logo_alt in header

--- a/_data/config.json
+++ b/_data/config.json
@@ -6,7 +6,7 @@
     "header": {
         "title": "AT Soundmedium",
         "logo": "images/logo.svg",
-        "logo_alt": "Agency logo",
+        "logo_alt": "AT Soundmedium",
         "has_nav": true,
         "nav_links": [
             {
