config.json: updated logo in header

--- a/_data/config.json
+++ b/_data/config.json
@@ -5,7 +5,7 @@
     "base_font": "fraunces",
     "header": {
         "title": "AT Soundmedium",
-        "logo": "images/logo.svg",
+        "logo": "images/Schermata 2021-11-18 alle 12.28.24.png",
         "logo_alt": "AT Soundmedium",
         "has_nav": true,
         "nav_links": [
