--- a/_data/config.json
+++ b/_data/config.json
@@ -15,7 +15,7 @@
                 "style": "link"
             },
             {
-                "label": "REW",
+                "label": "REWI",
                 "url": "/portfolio/",
                 "style": "link"
             },
