--- a/_data/config.json
+++ b/_data/config.json
@@ -20,7 +20,7 @@
                 "style": "link"
             },
             {
-                "label": "About",
+                "label": "ABOUT",
                 "url": "/about/",
                 "style": "link"
             }
