config.json: updated url in social_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -32,7 +32,7 @@
         "social_links": [
             {
                 "label": "Instagram",
-                "url": "https://www.instagram.com/",
+                "url": "https://www.instagram.com/goldrupia/",
                 "style": "icon",
                 "icon": "instagram",
                 "new_window": true
